# wdk-v2-engine

./: .gitignore  LICENSE  wdk-v2-engine.podspec
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/jni/: wdk_jni.c
android/src/main/kotlin/com/tetherto/wdk/: WDKEngine.kt  WDKNetworkProvider.kt  WDKPlatformProvider.kt  WDKStorageProvider.kt
ios/: Package.swift  WDKEngine-Bridging-Header.h
ios/Sources/: WDKEngine.swift  WDKNetworkProvider.swift  WDKPlatformProvider.swift  WDKStorageProvider.swift
shared-c/: CMakeLists.txt
shared-c/bip/: bip32.c  bip32.h  bip39.c  bip39.h  bip39_wordlist_en.h  bip44.c  bip44.h
shared-c/bridge/: bridge.h  bridge_crypto.c  bridge_encoding.c  bridge_net.c  bridge_net.h  bridge_platform.c  bridge_platform.h  bridge_storage.c  bridge_storage.h  engine.c  engine.h  js_utils.h  key_store.c  key_store.h
shared-c/build-host/: test_bridges  wdk_test_runner
shared-c/encoding/: base58.c  base58.h  base58check.c  base58check.h  base64.c  base64.h  bech32.c  bech32.h  hex.c  hex.h
shared-c/hashing/: aes_gcm.c  aes_gcm.h  blake2b.c  blake2b.h  hkdf.c  hkdf.h  hmac.c  hmac.h  keccak256.c  keccak256.h  pbkdf2.c  pbkdf2.h  ripemd160.c  ripemd160.h  sha256.c  sha256.h  sha512.c  sha512.h
tests/: test_bridges.c  test_btc_integration.c  test_crypto.c  test_js_integration.c
